UI changes & Added Pie Chart for expenditure ratio

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,13 +11,16 @@
 	rel="stylesheet">
 <link href="css/materialize.css" type="text/css" rel="stylesheet"
 	media="screen,projection" />
+<link href="css/hover.css" type="text/css" rel="stylesheet"
+	media="screen,projection" />
 <link href="css/style.css" type="text/css" rel="stylesheet"
 	media="screen,projection" />
 </head>
 <body>
 	<nav role="navigation" class="z-depth-3">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Veterans Quality of Care</a>		
+			<a id="logo-container" href="#" class="brand-logo">Veterans
+				Quality of Care</a>
 		</div>
 	</nav>
 	<div class="section no-pad-bot" id="index-banner">
@@ -26,21 +29,24 @@
 		</div>
 	</div>
 
-	<div class="container">
-		<ul id="staggered-list" class = "waves-effect waves-light">
-			<li><a href="views/expenditure.html">
+	<div class="container" style="padding-left: 30px;">
+		<ul id="staggered-list">
+			<li class="hvr-shadow-radial"><a href="views/expenditure.html">
 					<h5>Expenditure Details</h5>
 			</a>
 				<p>State wise total expenditure and expenditure ratio</p></li>
-			<li><a>
+			<li class="hvr-shadow-radial"><a>
 					<h5>State wise Visualization</h5>
 			</a>
 				<p>State wise veteran population and staffing distribution</p></li>
-			
-			<li><a><h5>Staffing & Compensation Details</h5> </a>
+
+			<li class="hvr-shadow-radial"><a>
+					<h5>Staffing & Compensation Details</h5>
+			</a>
 				<p>Details about staffing and compensation, pension</p></li>
-			
-			<li><a><h5>Staffing & Patient Details</h5></a>
+
+			<li class="hvr-shadow-radial"><a><h5>Staffing & Patient
+						Details</h5></a>
 				<p>Details about staffing and unique patients</p></li>
 		</ul>
 	</div>
